--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,27 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="origin-trial" content="AksKxwG0/Srdw5Gqv5CrbMwnW+MuJcqTIRqZMWn5TFDQPY5ZFbY2SbSE+t57taKjx7AOBcVO9+SfLm9CkfGVlAwAAABJeyJvcmlnaW4iOiJodHRwOi8vMTI3LjAuMC4xOjU1MDAiLCJmZWF0dXJlIjoiV2ViR1BVIiwiZXhwaXJ5IjoxNjkxNzExOTk5fQ==">
     <title>WebGPU Graphics</title>
     <script defer type="text/javascript" src="index.js"></script>
   </head>
 
   <body>
-    <div class="menu">
-      <h3>WebGPU Graphics</h3>
-      <ul class="nav-ul">
-        <li><a class="example" href="#index">Home </a></li>
-
-        <li><span class="caret">Chapter 1</span>
-          <ul class="nested">
-            <li><a class="example" href="#ch01-webgpu-info">WebGPU Info</a></li>
-            <li><a class="example" href="#ch01-frame-rate">Frame Rate</a></li>
-            <li><a class="example" href="#ch01-color-triangle">Color Triangle</a></li>
-          </ul>
-        </li>
-        
-      </ul>
-    </div>
-
+    <%= require("html-loader!./side-nav.html").default %>
     <div class="right-div"></div>
   </body>
 </html>
