--- a/src/html/side-nav.html
+++ b/src/html/side-nav.html
@@ -3,14 +3,14 @@
     <ul class="nav-ul">
         <li><a class="example" href="#index">Home </a></li>
 
-        <li><span class="caret">Ch01: Development Tools</span>
+        <li><span class="caret">Ch01: Get Started</span>
             <ul class="nested">
                 <li><a class="example" href="#ch01-webgpu-info">WebGPU Info</a></li>
                 <li><a class="example" href="#ch01-frame-rate">Frame Rate</a></li>                
             </ul>
         </li>
 
-        <li><span class="caret">Ch02: Introduction</span>
+        <li><span class="caret">Ch02: 3D Shapes</span>
         </li>
     </ul>
 </div>
